--- a/2022-09-21_atividade_login/style.css
+++ b/2022-09-21_atividade_login/style.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(40, 42, 54);
 	color: rgb(248, 248, 242);
     font-family: 'Open Sans', sans-serif;
+    height: 100%;
 }
 .margin_auto {
     margin: auto;
