--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ input, textarea {
     background-color: rgb(68, 71, 90);
 	color: rgb(248, 248, 242);
 }
+section {
+    text-align: left;
+    background-color: #383a59;
+    border-radius: 8px;
+    padding: 15px;
+    min-width: 200px;
+    max-width: 500px;
+    width: max-content;
+    margin: auto;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.563);
+    text-align: center;
+}
 .areatitulo {
     position: relative;
     text-align: center;
@@ -31,15 +43,6 @@ img {
     border: solid 1px white;
     margin: auto;
 }
-section {
-    width: 50%;
-    min-width: 500px;
-    height: fit-content;
-    margin: auto;
-}
-.conteudo {
-    text-align: center;
-}
-.autor {
+.direita {
     text-align: right;
 }
